[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Coffin/Coffin-defender.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Coffin/Coffin.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Circle.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 32 )

[sub_resource type="CircleShape2D" id=2]
radius = 300.0

[node name="Coffin" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="UnionRange" type="Area2D" parent="."]

[node name="Circle" type="Sprite" parent="UnionRange"]
position = Vector2( -1.36872, 5.06642 )
scale = Vector2( 18, 18 )
texture = ExtResource( 3 )

[node name="ShapeRange" type="CollisionShape2D" parent="UnionRange"]
visible = false
shape = SubResource( 2 )

[connection signal="body_entered" from="UnionRange" to="." method="_on_UnionRange_body_entered"]
[connection signal="body_exited" from="UnionRange" to="." method="_on_UnionRange_body_exited"]
